--- a/public/admin/categoryFirst.html
+++ b/public/admin/categoryFirst.html
@@ -49,7 +49,7 @@
             </a>
             <!-- 退出登录 -->
 
-            <a class="log-out" data-toggle="modal" data-target=".bs-example-modal-sm" href="javascript:;"><i class="glyphicon glyphicon-log-out"></i></a>
+            <a class="log-out" data-toggle="modal" href="#logout_model"><i class="glyphicon glyphicon-log-out"></i></a>
 
             <div id="logout_model" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
                 <div class="modal-dialog modal-sm" role="document">
@@ -70,62 +70,80 @@
             </div>
         </div>
         <!-- 管理系统 -->
-        <section class="system">
+
+        <!-- 内容模块 -->
+        <div class="content container-fluid">
+          <section class="system">
             <a href="javascript">管理系统</a>/
             <a href="javascript">分类管理</a>/
             <a href="javascript">一级分类</a>
-        </section>
-        <!-- 内容模块 -->
-        <div class="content" style="text-align: left; margin-bottom: 20px">
-            <a type="button" class="btn btn-default" data-toggle="model" href="#addCategory">添加分类</a>
+          </section>
+            <button class="btn btn-default" data-toggle="modal" data-targrt="#addCategory">添加分类</button>
             <table class="table table-hover table-bordered">
-            <thead>
-              <tr>
-                <th>序号</th>
-                <th>分类名称</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>wanlum</td>
-              </tr>
-            </tbody>
-          </table>
+              <thead>
+                <tr>
+                  <th>序号</th>
+                  <th>分类名称</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>wanlum</td>
+                </tr>
+              </tbody>
+            </table>
+            <!-- 分页 -->
+            <div>
+              <ul class="pagination"></ul>
+            </div>
+
         </div>
+
         <!-- 模态框 -->
         <div id="addCategory" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-            <div class="modal-dialog modal-sm" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">添加分类</h4>
-      </div>
-      <div class="modal-body">
-         <input type="text" name="" palacehoder="输入一级分类">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-        <button type="button" class="btn btn-primary">确定</button>
-      </div>
+          <div class="modal-dialog modal-sm" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title">温馨提示</h4>
                 </div>
+                <div class="modal-body" style="color:darkred">
+                  <i class="glyphicon glyphicon-info-sign"></i> 您确定要退出后台管理系统吗？
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                  <a href="./login.html" type="button" class="btn btn-primary">确定</a>
+                </div>
+              </div>
           </div>
-          </div>
+        </div>
+
 
     </main>
     <!-- 主体内容结束================= -->
+    <script type="text/template" id="SecondCate">
+      <%for (var i = 0; i < rows.length; i++) {%>
+        <tr>
+          <td><%=(page-1)*size+i+1%></td>
+          <td><%=rows[i].categoryName%></td>
+        </tr>
+      <%}%>
+    </script>
     <!-- 引入jquery文件 -->
     <script src="assets/jquery/jquery.min.js"></script>
     <!-- 引入bootstrap插件 -->
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <!-- 引入表单验证插件 -->
     <script src="assets/bootstrap-validator/js/bootstrapValidator.min.js"></script>
-    <!-- 引入echarts库 -->
-    <script src="assets/echarts/echarts.min.js"></script>
+    <!-- 插入分页插件 -->
+    <script src="assets/bootstrap-paginator/bootstrap-paginator.min.js"></script>
+    <!-- 引入模板arttemplate插件 -->
+    <script src="./assets/artTemplate/template-native.js"></script>
     <!-- 引入进度条插件 -->
     <script src="assets/nprogress/nprogress.js"></script>
     <!-- 引入本页面的js文件 -->
-    <script src="js/index.js"></script>
+    <script src="js/categoryFirst.js"></script>
     <script src="js/admin.js"></script>
 </body>
 </htm-==
