--- a/public/admin/categorySecond.html
+++ b/public/admin/categorySecond.html
@@ -78,7 +78,7 @@
             <a href="javascript">分类管理</a>/
             <a href="javascript">二级分类</a>
           </section>
-          <a type="button" class="btn btn-default" data-toggle="model" data-target="#addCategory">添加分类</a>
+          <button type="button" class="btn btn-default" data-toggle="modal" data-target="#addCategory2">添加分类</button>
           <table class="table table-hover table-bordered">
             <thead>
               <tr>
@@ -104,16 +104,51 @@
           </div>
 
         </div>
-
-    </main>
+        <!-- 模态框 -->
+        <div id="addCategory2" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+          <div class="modal-dialog modal-sm" role="document">
+              <div class="modal-content">
+                <form id="secondForm">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title">添加分类</h4>
+                </div>
+                <div class="modal-body">
+                   <!-- 下拉框 -->
+                  <div class="dropdown">一级分类：
+                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                     游泳馆
+                     <span class="caret"></span>
+                   </button>
+                   <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                     <li><a href="#">Action</a></li>
+                     <li><a href="#">Another action</a></li>
+                     <li><a href="#">Something else here</a></li>
+                     <li><a href="#">Separated link</a></li>
+                   </ul>
+                  </div>
+                  <input type="text" name="" class="form-control" placeholder="请输入二级分类"  style="margin: 15px 0">
+                  <!-- 上传图片 -->
+                  <input type="filed" class="form-control" name="file" value="上传图片" style="width:30%">
+                  <img src="./images/none.png" alt="" width="100" height="100" style="margin-top:15px">
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                  <button type="submit" class="btn btn-primary">确定</button>
+                </div>
+                </form>
+              </div>
+          </div>
+        </div>
+      </main>
     <!-- 主体内容结束================= -->
     <script type="text/template" id="secondRes">
        <%for (var i = 0; i < rows.length; i++) {%>
           <tr>
             <td><%=(page - 1) * size +i +1%></td>
-            <td><%=1%></td>
+            <td><%=rows[i].categoryName%></td>
             <td><%=rows[i].brandName%></td>
-            <td><img src="<%=rows[i].brandLogo%>"></td>
+            <td><img height="30" src="<%=rows[i].brandLogo%>"></td>
           </tr>
        <%}%>
     </script>
