--- a/public/admin/products.html
+++ b/public/admin/products.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <title>后台管理系统-首页</title>
@@ -11,7 +12,32 @@
     <link rel="stylesheet" type="text/css" href="assets/nprogress/nprogress.css">
     <!-- 引入当前页面的css文件 -->
     <link rel="stylesheet" type="text/css" href="css/admin.css">
+    <style>
+        .fileUPload {
+            position: relative;
+            height: 200px
+            
+        }
+        .fileUPload a {
+            position: absolute;
+            left: 0;
+            top: 0;
+            
+        }
+        .fileUPload [type="file"] {
+            opacity: 0;
+            display: inline-block;
+            width: 85px;
+            height: 43px;
+        }
+        .fileUPload img {
+            width: 50px;
+            height: 50px;
+            margin-right: 10px;
+        }
+    </style>
 </head>
+
 <body>
     <!-- 侧边栏内容开始-=========== -->
     <aside class="side-bar">
@@ -26,15 +52,22 @@
         </div>
         <!-- menu菜单 -->
         <ul class="menu">
-             <li><a href="./users.html"><i class="glyphicon glyphicon-user"></i>用户管理</a></li>
-             <li>
-                <a href="javascript:;"><i class="glyphicon glyphicon-th-list"></i>分类管理</a>
+            <li>
+                <a href="./users.html">
+                    <i class="glyphicon glyphicon-user"></i>用户管理</a>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i class="glyphicon glyphicon-th-list"></i>分类管理</a>
                 <section class="son">
                     <a href="./categoryFirst.html">一级分类</a>
                     <a href="./categorySecond.html">二级分类</a>
                 </section>
-             </li>
-             <li><a href="./products.html"><i class="glyphicon glyphicon-tags"></i>商品管理</a></li>
+            </li>
+            <li>
+                <a href="./products.html">
+                    <i class="glyphicon glyphicon-tags"></i>商品管理</a>
+            </li>
         </ul>
     </aside>
     <!-- 侧边栏内容结束-=========== -->
@@ -49,22 +82,26 @@
             </a>
             <!-- 退出登录 -->
 
-            <a class="log-out" data-toggle="modal" data-target=".bs-example-modal-sm" href="javascript:;"><i class="glyphicon glyphicon-log-out"></i></a>
+            <a class="log-out" data-toggle="modal" data-target=".bs-example-modal-sm" href="javascript:;">
+                <i class="glyphicon glyphicon-log-out"></i>
+            </a>
 
             <div id="logout_model" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
                 <div class="modal-dialog modal-sm" role="document">
                     <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title">温馨提示</h4>
-                    </div>
-                    <div class="modal-body" style="color:darkred">
-                        <i class="glyphicon glyphicon-info-sign"></i> 您确定要退出后台管理系统吗？
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                        <a href="./login.html" type="button" class="btn btn-primary">确定</a>
-                    </div>
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <h4 class="modal-title">温馨提示</h4>
+                        </div>
+                        <div class="modal-body" style="color:darkred">
+                            <i class="glyphicon glyphicon-info-sign"></i> 您确定要退出后台管理系统吗？
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                            <a href="./login.html" type="button" class="btn btn-primary">确定</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -73,55 +110,129 @@
         <!-- 内容模块 -->
         <div class="content container-fluid">
             <!-- 管理系统 -->
-          <section class="system">
-            <a href="javascript">管理系统</a>/
-            <a href="javascript">首页</a>
-          </section>
-          <a type="button" class="btn btn-default" data-toggle="model" data-target="#addCategory">添加商品</a>
-          <table class="table table-hover table-bordered">
-            <thead>
-              <tr>
-                <th>序号</th>
-                <th>商品名称</th>
-                <th>商品描述</th>
-                <th>商品库存</th>
-                <th>商品尺寸</th>
-                <th>商品状态</th>
-                <th>操作</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>【莹恋】MIZUNO美津浓V1GA159002乒乓球鞋男鞋女鞋室内综合训练鞋</td>
-                <td>描述</td>
-                <td>44</td>
-                <td>35-56</td>
-                <td>已上架</td>
-                <td>
-                  <button type="button" class="btn btn-danger">下架</button>
-                  <button type="button" class="btn btn-primary">编辑</button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+            <section class="system">
+                <a href="javascript">管理系统</a>/
+                <a href="javascript">首页</a>
+            </section>
+            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#addProduct">添加商品</button>
+            <table class="table table-hover table-bordered">
+                <thead>
+                    <tr>
+                        <th>序号</th>
+                        <th>商品名称</th>
+                        <th>商品描述</th>
+                        <th>商品库存</th>
+                        <th>商品尺寸</th>
+                        <th>商品状态</th>
+                        <th>操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>【莹恋】MIZUNO美津浓V1GA159002乒乓球鞋男鞋女鞋室内综合训练鞋</td>
+                        <td>描述</td>
+                        <td>44</td>
+                        <td>35-56</td>
+                        <td>已上架</td>
+                        <td>
+                            <button type="button" class="btn btn-danger">下架</button>
+                            <button type="button" class="btn btn-primary">编辑</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <!-- 分页菜单 -->
+            <div>
+                <ul id="pagination">
+                </ul>
+            </div>
 
+        </div>
+        <!-- 添加商品的模态框 -->
+        <div id="addProduct" class="modal fade " tabindex="-1">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title">添加商品</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form action="" id="productform" >
+                            <div class="form-group">
+                                <input type="text" placeholder="请输入商品名称" id="proName" name="proName" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <input type="textarea" placeholder="请输入商品描述" id="proDesc" name="proDesc" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" placeholder="请输入商品库存" id="num" name="num" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" placeholder="请输入商品价格" id="price" name="price" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" placeholder="请输入商品原价" id="oldPrice" name="oldPrice" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" placeholder="请输入商品尺码" id="size" name="size" class="form-control">
+                            </div>
+
+                            <div class="fileUPload" style="height: 100px">
+                                <a href="javascript" class="btn btn-default">上传图片</a>
+                                <div class="form-group">
+                                    <input type="file" name="pic1" id="pic"><span>提示：必须上传三张图片</span>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="submit" class="btn btn-primary" form="productform">确定</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </main>
     <!-- 主体内容结束================= -->
+    <!-- 模板引擎 -->
+    <script type="text/template" id="productsRes">
+        <%for (var i = 0; i < rows.length; i++) {%>
+        <tr>
+            <td><%=(page-1)*size+i+1%></td>
+            <td><%=rows[i].proName%></td>
+            <td><%=rows[i].proDesc%></td>
+            <td><%=rows[i].num%></td>
+            <td><%=rows[i].size%></td>
+            <td><%=rows[i].status=1? '已上架': '下架'%></td>
+            <td>
+              <button type="button" class="btn btn-danger">下架</button>
+              <button type="button" class="btn btn-primary">编辑</button>
+            </td>
+        </tr>
+        <%}%>
+    </script>
     <!-- 引入jquery文件 -->
     <script src="assets/jquery/jquery.min.js"></script>
     <!-- 引入bootstrap插件 -->
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <!-- 引入表单验证插件 -->
     <script src="assets/bootstrap-validator/js/bootstrapValidator.min.js"></script>
-    <!-- 引入echarts库 -->
-    <script src="assets/echarts/echarts.min.js"></script>
+    <!-- 引入图片文件上传插件 -->
+    <script src="./assets/jquery-fileupload/jquery.ui.widget.js"></script>
+    <script src="./assets/jquery-fileupload/jquery.fileupload.js"></script>
+    <!-- 引入引擎模板 -->
+    <script src="./assets/artTemplate/template-native.js"></script>
+    <!-- 引入分页插件 -->
+    <script src="assets/bootstrap-paginator/bootstrap-paginator.min.js"></script>
     <!-- 引入进度条插件 -->
     <script src="assets/nprogress/nprogress.js"></script>
     <!-- 引入本页面的js文件 -->
-    <script src="js/index.js"></script>
+    <script src="js/products.js"></script>
     <script src="js/admin.js"></script>
 </body>
+
 </html>
