--- a/public/Tmobile/searchList.html
+++ b/public/Tmobile/searchList.html
@@ -61,12 +61,20 @@
       </div>
     </form>
     <div class="search-result">
-
+ 
       <div class="search-result-order">
-        <a href="">上架时间<i class="fa fa-angle-down"></i> </a>
-        <a href="">价格<i class="fa fa-angle-down"></i></a>
-        <a href="">销量<i class="fa fa-angle-down"></i></a>
-        <a href="">折扣<i class="fa fa-angle-down"></i></a>
+        <a href="">上架时间
+          <i class="fa fa-angle-down"></i>
+        </a>
+        <a href="">价格
+          <i class="fa fa-angle-down"></i>
+        </a>
+        <a href="">销量
+          <i class="fa fa-angle-down"></i>
+        </a>
+        <a href="">折扣
+          <i class="fa fa-angle-down"></i>
+        </a>
       </div>
       <div class="search-result-list mui-clearfix">
         <div class="item-wrap">
@@ -116,11 +124,15 @@
       </div>
     </div>
   </div>
+  <script style="text/template" id="searchTemplate">
+     
+  </script>
   <script src="./lib/mui/js/mui.min.js"></script>
   <!-- 这是zepto里的核心模块之一在开发的时候可以一一进行引入 但是当项目上线之后 就需要合并所有模块 -->
   <script src="./lib/zepto/zepto.min.js"></script>
   <script src="./lib/artTemplate/template-native.js"></script>
   <script src="./js/common.js"></script>
+  <script src="./js/searchList.js"></script>
 </body>
 
 </html>
