--- a/public/Tmobile/search.html
+++ b/public/Tmobile/search.html
@@ -56,14 +56,14 @@
   <div class="mui-content lt-search">
     <form>
       <div class="search-box">
-        <span>搜索</span>
+        <span id="search-btn">搜索</span>
         <input type="text" placeholder="搜索你喜欢的商品">
       </div>
     </form>
     <div class="search-history">
       <div class="search-history-title mui-clearfix">
         <span class="mui-pull-left">搜索历史</span>
-        <span class="mui-pull-right"><i class="fa fa-trash"></i> 清空记录</span>
+        <span class="mui-pull-right clearHistory"><i class="fa fa-trash"></i> 清空记录</span>
       </div>
       <ul class="search-history-list">
         <li>
@@ -77,12 +77,24 @@
       </ul>
     </div>
   </div>
+  <script type="text/template" id="historyTemplate">
+    <%if (data.length == 0) {%>
+        <li><p>您还没有历史记录哦！</p></li>
+      <%} else {%>
+    <%for (var i = 0; i < data.length; i++) {%>
+        <li>
+          <span class="mui-pull-left"><%=data[i]%></span>
+          <i class="fa fa-times mui-pull-right"></i>
+        </li>  
+    <%}%>
+   <%}%> 
+  </script>
   <script src="./lib/mui/js/mui.min.js"></script>
   <!-- 这是zepto里的核心模块之一在开发的时候可以一一进行引入 但是当项目上线之后 就需要合并所有模块 -->
   <script src="./lib/zepto/zepto.min.js"></script>
   <script src="./lib/artTemplate/template-native.js"></script>
   <script src="./js/common.js"></script>
-
+  <script src="./js/search.js"></script>
 </body>
 
 </html>
